Fixed z-index for subscribe window

--- a/src/scss/modals/_subscribe.scss
+++ b/src/scss/modals/_subscribe.scss
@@ -6,7 +6,7 @@
   bottom: 0;
   left: 0;
   background-color: rgba(6, 14, 22, 0.95);
-  z-index: 9999;
+  z-index: 99999;
 
   &--visible {
     display: block;
